# duplicates

./: .gitignore  Cargo.toml  README.md  config.toml  filehashes.db
src/: datastore.rs  file_manager.rs  logger.rs  main.rs  settings.rs  tests.rs
