[package]
name = "duplicates"
version = "0.1.0"
authors = ["Jarosław Pawlak <jaroslaw.pawlak@ mail from google .com>"]
edition = "2021"

[dependencies]
sha2 = "0.10.6"
walkdir = "2"
serde_derive = "^1.0.8"
serde = "^1.0.8"
notify = "4.0.17"
lettre = "0.10.4"
toml = "0.7.3"
#sqlite3 = "*"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
#[dev-dependencies]
#mockall = "0.11.1"
